@@ -99,6 +99,8 @@ The expression package uses functions to construct SQL expressions.  The return 
 
 .. autofunction:: text
 
+.. autofunction:: tuple_
+
 .. autofunction:: union
 
 .. autofunction:: union_all
